fix redundant set creation